--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = libpbench
+name = pybench
 summary = A benchmarking and performance analysis library
 description-file =
     README.md
