--- a/setup.cfg
+++ b/setup.cfg
@@ -46,6 +46,7 @@ scripts =
     bin/pbench-agent-config-activate
     bin/pbench-add-metalog-option
     bin/cdm-get-iterations
+    bin/pbench-test
 
 [entry_points]
 console_scripts = 
