--- a/tox.ini
+++ b/tox.ini
@@ -3,8 +3,7 @@ minversion = 3.5.0
 skipdist = True
 skip_missing_interpreters = True
 isolated_build = True
-envlist = lint
-          py36,py37
+envlist = lint,py3
 
 [testenv]
 usedevelop = True
@@ -24,6 +23,12 @@ whitelist_externals =
     rm
     find
     env
+
+[testenv:py3]
+commands_pre =
+  find {toxinidir} -type f -not -path '{toxinidir}/.tox/*' -path '*/__pycache__/*' -name '*.py[c|o]' -delete
+commands = 
+  pytest ./pbench/test
 
 [testenv:lint]
 description = Runs all linting tasks
